Initial Commit od Structure.Data project. Uodate MVC for new DBContext (MyStoreDBContext)

--- a/Solution1/MyStore.MVC/appsettings.json
+++ b/Solution1/MyStore.MVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MyStoreIdentityConectionDB": "Server=.;Database=MyStoreIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyStoreIdentityConectionDB": "Server=.;Database=MyStoreIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MystoreDBConection": "Server=.;Database=MyStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
