Configure Presentation Layer for Dependency Container

--- a/Solution1/MyStore.MVC/MyStore.MVC.csproj
+++ b/Solution1/MyStore.MVC/MyStore.MVC.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyStore.Infra.Data\MyStore.Infra.Data.csproj" />
+    <ProjectReference Include="..\MyStore.Infra.IoC\MyStore.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
