Commit changes for Presentation Product Controller, Views, Styling, Authentication

--- a/Solution1/MyStore.MVC/MyStore.MVC.csproj
+++ b/Solution1/MyStore.MVC/MyStore.MVC.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\MyStore.Infra.IoC\MyStore.Infra.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
