Implmentatios of Swagger on API

--- a/Solution1/MyStore.API/appsettings.json
+++ b/Solution1/MyStore.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MyStoreIdentityConectionDB": "Server=.;Database=MyStoreIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MystoreDBConection": "Server=.;Database=MyStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
