--- a/Solution1/MyStore.API/Properties/launchSettings.json
+++ b/Solution1/MyStore.API/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "MyStore.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Product",
+      "launchUrl": "Swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
