--- a/Solution1/MyStore.Domain/MyStore.Domain.csproj
+++ b/Solution1/MyStore.Domain/MyStore.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyStore.Infra.Bus\MyStore.Infra.Bus.csproj" />
+  </ItemGroup>
+
 </Project>
