--- a/Solution1/MyStore.Domain/MyStore.Domain.csproj
+++ b/Solution1/MyStore.Domain/MyStore.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyStore.Infra.Bus\MyStore.Infra.Bus.csproj" />
   </ItemGroup>
 
